[workspace]

members = [
    "ch01/hello-world",
    "ch02/guessing-game",
    "ch03/fibonacci",
    "ch03/tempconv",
    "ch03/twelvedays",
    "ch05/rectangles",
    "ch07/packages_crates_modules",
    "ch08/hashmap",
    "ch08/mean_median_mode",
    "ch08/strings",
    "ch08/vector",
    "ch10/generics",
    "ch10/lifetimes",
    "ch10/traits",
    "ch11/unit_tests",
    "ch12/minigrep",
    "ch13/closures",
    "ch13/iterators",
    "ch13/minigrep2",
    "ch14/publishing",
    "ch15/boxes",
    "ch15/deref",
    "ch15/cleanup",
    "ch15/rc",
    "ch15/refcell",
    "ch15/tree",
    "ch16/basic_threads",
    "ch16/mutex",
    "ch17/trait_objects",
    "ch17/oop"
]